Home and Projects pages load correctly.

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -41,11 +41,11 @@ a:hover, a:active {
                font-size:50px;
                background-color: white;">
 
-<a href="root" style="color: black">
+<a href='/' style="color: black">
 home
 </a>
 
-<a href="pages#projects" style="color: black" id="selected">
+<a href="/projects" style="color: black" id="selected">
 projects
 </a>
 
