--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -41,11 +41,11 @@ a:hover, a:active {
                font-size:50px;
                background-color: white;">
 
-<a href='root' style="color: black" id="selected">
+<a href='/' style="color: black" id="selected">
 home
 </a>
 
-<a href="pages#projects"style="color: black">
+<a href="/projects"style="color: black">
 projects
 </a>
 </b>
