Add partials and destroy action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -55,5 +55,6 @@ projects
 <h1>Devanshu Row</h1>
 <p>An aspiring Ruby on Rails developer</p>
 
+<%= link_to "Alpha Blog", articles_path %>
 </body>
 </html>
