--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -52,7 +52,7 @@ projects
 </b>
 </div>
 
-<p>There are no projects to display!</p>
+<p><%= link_to "Alpha Blog", articles_path %></p>
 
 </body>
 </html>
