Front-end styling and other minor fixes

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,60 +1,4 @@
-<!DOCTYPE html>
-<html lang="en-US">
-
-<head>
-<style>
-body {background-color:rgb(193, 115, 59)}
-
-h1 {
-  text-align:center;
-  font-size:70px;
-  font-family:Arial;
-  color:white
-}
-
-p {
-  text-align:center;
-  color:white;
-  font-size:35px
-}
-a:link {
-  text-decoration:none
-}
-
-a:hover, a:active {
-  border: 2px solid peachpuff;
-  border-radius: 20px;
-  background:peachpuff
-}
-
-#selected {
-  border: 1px solid peachpuff;
-  border-radius: 20px;
-  background:peachpuff
-}
-
-</style>
-</head>
-
-<b><div class="navigation_bar" 
-        style="text-align:center;           
-               font-size:50px;
-               background-color: white;">
-
-<a href='/' style="color: black" id="selected">
-home
-</a>
-
-<a href="/projects"style="color: black">
-projects
-</a>
-</b>
-
+<div class="center jumbotron">
+  <h1>ALPHA BLOG</h1>
+  <%= link_to "Sign up", "#", class: "btn btn-danger btn-lg btn-xlarge" %>
 </div>
-
-<h1>Devanshu Row</h1>
-<p>An aspiring Ruby on Rails developer</p>
-
-
-</body>
-</html>
