--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -67,19 +67,24 @@ footer ul li {
 .article-actions {
   border-top: 1px solid #eaeaea;
   padding-top: 5px;
-  }
+}
   
-  .description {
+.description {
   margin-top: 0;
-  }
+}
 
-  .article-title {
-    font-weight: bold;  
-    font-size: 1.5em;
-    }
+.article-title {
+  font-weight: bold;  
+  font-size: 1.5em;
+}
     
-    .article-body {
-    border-top: 1px solid #eaeaea;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    }
+.article-body {
+  border-top: 1px solid #eaeaea;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.article-meta-details {
+  border-top: 1px solid #eaeaea;
+  margin-top: 10px;
+}
