--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -88,3 +88,9 @@ footer ul li {
   border-top: 1px solid #eaeaea;
   margin-top: 10px;
 }
+
+.listing {
+  list-style: none;
+  padding-left: 0;
+  
+}
