--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,7 @@
 <h2 align="center">Title: <%= @article.title %></h2>
 
 <div class="well col-xs-8 col-xs-offset-2">
-  <%= if @article.user %>
+  <% if @article.user %>
     <ul class="listing">
       <div class="row center">
         <div class="col-md-4 col-md-offset-4">
@@ -11,7 +11,7 @@
             <%= link_to @article.user.username, user_path(@article.user) %>
           </li>
           <li><small>
-            <%= pluralize(@article.users.articles.count, "article") if @article.user.articles %>
+            <%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
           </small></li>
         </div>
       </div>
