--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,7 +7,13 @@
       <div class="row">
         <div class="well col-md-4 col-md-offset-4">
           <li><%= link_to gravatar_for(user), user_path(user) %></li>
-          <li class="article-title"><%= link_to user.username, user_path(user) %></li>
+          <li class="article-title">
+            <% if user.admin? %>
+              <%= link_to user.username, user_path(user), style: "color:goldenrod" %>
+            <% else %>
+              <%= link_to user.username, user_path(user) %>
+            <% end %>
+          </li>
           <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
           <% if logged_in? and current_user.admin? %>
             <li><%= link_to "Delete user", user_path(user), method: :delete,
