--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,7 @@
 <div class="center jumbotron">
-  <h1>ALPHA BLOG</h1>
-  <%= link_to "Sign up", signup_path, class: "btn btn-danger btn-lg btn-xlarge" %>
+</div>
+
+<div class= "home_text">The meta is ever changing... Lets beat it together at CR Blog! 
+  <div>Sign up to share an interesting deck or strategy. 
+    You can read other users' tips and tricks without even logging in!</div>
 </div>
