--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,15 +1,15 @@
 body {
-  background-color: #fff;
+  background-color:goldenrod;
   color: #333;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 15px;
+  font-family: sans-serif;
+  font-size: 16px;
   line-height: 18px;
 }
 
 p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 15px;
-  line-height: 18px;
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 25px;
 }
 
 pre {
@@ -59,3 +59,5 @@ td {
 label {
   display: block;
 }
+
+
