--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
+    <div class= "home_text">
+        <div>Share interesting decks and strategies or 
+          read and learn from other users without logging in!</div>
+      </div>
 </div>
 
-<div class= "home_text">The meta is ever changing... Lets beat it together at CR Blog! 
-  <div>Sign up to share an interesting deck or strategy. 
-    You can read other users' tips and tricks without even logging in!</div>
-</div>
