editing vies to display clash royale strats

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -6,7 +6,7 @@
     <%= f.label :category %>
   </div>
   <div class="col-sm-8">
-    <%= f.text_field :name, class: "form-control", placeholder: "Category name", autofocus: true %>
+    <%= f.text_field :name, class: "form-control", placeholder: "Type of strat", autofocus: true %>
   </div>
 </div>
 
@@ -17,5 +17,5 @@
 </div>
 <% end %>
 <div class="col-xs-4 col-xs-offset-4">
-[ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
+[ <%= link_to "Cancel request and return to all strats", articles_path %> ]
  
