--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
     <div class= "home_text">
-        <div>Share interesting decks and strategies or 
-          read and learn from other users without logging in!</div>
-      </div>
+        <div>Welcome to Clash Royale Blog! 
+            <p>Create an account to share interesting strategies or read and learn from other users without logging in!</div>
+            </p></div>
 </div>
 
