--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -20,9 +20,9 @@
         <% end %>
         <% if logged_in? && (current_user == article.user || current_user.admin?) %>
           <div class="article-actions">
-            <%= link_to "Edit this article", edit_article_path(article), class: "btn btn-xs btn-primary" %>
-            <%= link_to "Delete this article", article_path(article), method: :delete,
-            data: { confirm: "Are you sure you want to delete the article?"},
+            <%= link_to "Edit this strat", edit_article_path(article), class: "btn btn-xs btn-primary" %>
+            <%= link_to "Delete this strat", article_path(article), method: :delete,
+            data: { confirm: "Are you sure you want to delete this strat?"},
             class: "btn btn-xs btn-danger" %>
           </div>
         <% end %>
