--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,7 +8,7 @@
           <%= f.label :title %>
         </div>
         <div class="col-sm-8">
-          <%= f.text_field :title, class: "form-control", placeholder: "Title of article", autofocus: true %>
+          <%= f.text_field :title, class: "form-control", placeholder: "Title", autofocus: true %>
         </div>
       </div>
       <div class="form-group">
@@ -16,7 +16,7 @@
           <%= f.label :description %>
         </div>
         <div class="col-sm-8">
-          <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body of article" %>
+          <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Body" %>
         </div>
       </div>
 
@@ -37,7 +37,7 @@
       </div>
     <% end %>
     <div class="col-xs-4 col-xs-offset-4">
-      [ <%= link_to "Cancel request and return to articles listing", articles_path %> ]
+      [ <%= link_to "Cancel request and return to all strats", articles_path %> ]
     </div>
   </div>
 </div>
