--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,7 +11,7 @@
             <%= link_to @article.user.username, user_path(@article.user) %>
           </li>
           <li><small>
-            <%= pluralize(@article.user.articles.count, "article") if @article.user.articles %>
+            <%= pluralize(@article.user.articles.count, "strat") if @article.user.articles %>
           </small></li>
         </div>
       </div>
@@ -25,11 +25,11 @@
   <% end %>
   <div class="article-actions">
     <% if logged_in? && (current_user == @article.user || current_user.admin?) %>
-      <%= link_to "Edit this article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
-      <%= link_to "Delete this article", article_path(@article), method: :delete,
-      data: { confirm: "Are you sure you want to delete the article?" },
+      <%= link_to "Edit this strat", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+      <%= link_to "Delete this strat", article_path(@article), method: :delete,
+      data: { confirm: "Are you sure you want to delete this strat?" },
       class: "btn btn-xs btn-danger" %>
     <% end %>
-    <%= link_to "View all articles", articles_path, class: "btn btn-xs btn-success" %>
+    <%= link_to "View all strats", articles_path, class: "btn btn-xs btn-success" %>
   </div>
 </div>
