--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center">Listing All Categories</h1>
+<h1 align="center">Clash Royale Strategies</h1>
 <div align="center">
   <%= will_paginate %>
   <% @categories.each do |category| %>
@@ -8,7 +8,7 @@
           <li class="article-title">
             <%= link_to "#{category.name}", category_path(category) %>
           </li>
-          <li><small><%= pluralize(category.articles.count, "article") %></small></li>
+          <li><small><%= pluralize(category.articles.count, "strat") %></small></li>
         </div>
       </div>
     </ul>
