--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center">All Alpha Bloggers</h1>
+<h1 align="center">All Clash Royale Bloggers</h1>
 
 <div align="center">
   <%= will_paginate %>
@@ -17,7 +17,7 @@
           <li><small><%= pluralize(user.articles.count, "article") if user.articles %></small></li>
           <% if logged_in? and current_user.admin? %>
             <li><%= link_to "Delete user", user_path(user), method: :delete,
-              data: { confirm: "Are you sure you want to delete user and all their articles?" } %>>
+              data: { confirm: "Are you sure you want to delete user and all their strats?" } %>>
             </li>
           <% end %>
         </div>
