--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -16,7 +16,7 @@
           </div>
         </div>
         <% if article.categories.any? %>
-          <p>Categories: <%= render article.categories %></p>
+          <p>Type of Strat: <%= render article.categories %></p>
         <% end %>
         <% if logged_in? && (current_user == article.user || current_user.admin?) %>
           <div class="article-actions">
