--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,8 @@
-<div class="center jumbotron">
-    <div class= "home_text">
-        <div>Welcome to Clash Royale Blog! 
-            <p>Create an account to share interesting strategies or read and learn from other users without logging in!</div>
-            </p></div>
-</div>
+<div class= "home_text">
+  Welcome to Clash Royale Blog!
+  <br>Create an account to share interesting strategies or read and learn from other users without logging in!
+</div>   
+<%= image_tag("/assets/XBOW2_9.JPG", class: "home_image") %>
+      
+
 
