--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center">Clash Royale Strategies</h1>
+<h1 align="center">Clash Royale Strat Types</h1>
 <div align="center">
   <%= will_paginate %>
   <% @categories.each do |category| %>
