--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -29,9 +29,9 @@
         <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
-          aria-haspopup="true" aria-expanded="false">Categories<span class="caret"></span></a>
+          aria-haspopup="true" aria-expanded="false">Strat Type<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "All Categories", categories_path %></li>
+            <li><%= link_to "All", categories_path %></li>
             <% Category.all.each do |category| %>
               <li><%= link_to "#{category.name}", category_path(category)%></li> 
             <% end %>
