made some more changes in appearances

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -32,10 +32,11 @@
 
       <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
-          <%= f.submit class: 'btn btn-primary btn-lg' %>
+          <%= f.submit "Update", class: 'btn btn-primary btn-lg' %>
+          <% end %>
         </div>
       </div>
-    <% end %>
+    
     <div class="col-xs-4 col-xs-offset-4">
       [ <%= link_to "Cancel request and return to all strats", articles_path %> ]
     </div>
