--- a/app/views/user_mailer/registration_confirmation.html.erb
+++ b/app/views/user_mailer/registration_confirmation.html.erb
@@ -2,4 +2,4 @@ Hi <%= @user.username %>,
 
 Thanks for registering! To confirm your registration click the URL below:
 
-<%= confirm_email_user_url(@user.confirm_token, host: "http://localhost:3000")%>
+<%= confirm_email_user_url(@user.confirm_token, host: "https://alpha-blog-devanshu.herokuapp.com/")%>
